kubernetes/services/matrix/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: matrix
  labels:
    name: matrix
    pod-security.kubernetes.io/enforce: baseline
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
